--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img src="./assets/images/movie.png" alt="Screenshot of movie project" height="200">
     <h3><a href="./public/graduation.html">Graduation Invite Project</a></h3>
     <img src="./assets/images/graduation.png" alt="Screenshot of Graduation Invite Project" height="200">
+    <h3><a href="./public/Capstone Project 1/index.html">My Online Resume</a></h3>
     <hr>
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
