connect files via VScode for easier access

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h3><a href="./public/graduation.html">Graduation Invite Project</a></h3>
     <img src="./assets/images/graduation.png" alt="Screenshot of Graduation Invite Project" height="200">
     <h3><a href="./public/Capstone Project 1/index.html">My Online Resume</a></h3>
+    <img src="./assets/images/resume.png" alt="Screenshot of My Online Resume" height="200">
     <hr>
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
