fix typing errors

--- a/public/graduation.html
+++ b/public/graduation.html
@@ -2,7 +2,7 @@
 <!-- Example Google Maps Link -->
 <!-- I dont celebrate birthday but hey lets celebrate a graduation-->
 
-<h1>It My Graduation</h1>
+<h1>It's My Graduation</h1>
 <h2>On the 21st June</h2>
 <img src="https://img.freepik.com/free-vector/hand-painted-watercolor-graduation-illustration_23-2148950971.jpg?w=2000" width="500" alt="watercolor graduation drawing"/>
 
